# enum_dispatch_pegasust

./: CHANGELOG.md  Cargo.toml  README.md
benches/: blackbox.rs  compiler-optimized.rs  homogeneous-vec.rs
benches/common_structs/: mod.rs
src/: attributed_parser.rs  cache.rs  enum_dispatch_arg_list.rs  enum_dispatch_item.rs  enum_dispatch_variant.rs  expansion.rs  lib.rs
tests/: compiles.rs  foreign_types.rs  generics.rs  latebound.rs  method_generics.rs  multiple_traits.rs  no_std.rs  result_alias.rs  trait_cfg.rs  variant_cfg.rs
