[package]
name = "enum_dispatch"
version = "0.3.5"
authors = ["Anton Lazarev <https://antonok.com>"]
edition = "2018"
description = "Near drop-in replacement for dynamic-dispatched method calls with up to 10x the speed"
repository = "https://gitlab.com/antonok/enum_dispatch"
readme = "README.md"
keywords = ["speed", "performance", "traits", "dynamic", "optimization"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "development-tools::cargo-plugins"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
once_cell = "^1.0.1"
quote = "^1.0"
proc-macro2 = "^1.0"
syn = { version = "^1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
rand = ">= 0.5.5, <= 0.6.1"
enum_derive = "= 0.1.7"
custom_derive = "= 0.1.7"
serde = { version = "= 1.0.82", features = ["derive"] }
serde_json = "= 1.0.33"
